--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,22 @@ jobs:
 
     steps:
       - checkout
-      - run: wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
-      - run: chmod +x ~/miniconda.sh && ~/miniconda.sh -b
-      - run: echo 'export PATH="$HOME/miniconda3/bin:$PATH"' >> $BASH_ENV
-      - run: conda create -n testenv python=3.6 pandas scikit-learn joblib Cython mkl -yq
+      - restore_cache:
+          key: v1-packages
+      - run: |
+          if
+            ls $HOME/miniconda3/bin | grep conda -q
+          else
+            wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
+            chmod +x ~/miniconda.sh && ~/miniconda.sh -b
+            echo 'export PATH="$HOME/miniconda3/bin:$PATH"' >> $BASH_ENV
+            conda create -n testenv python=3.6 pandas scikit-learn joblib Cython mkl -yq
       - run: source activate testenv
-      - run: conda install pot nilearn -c conda-forge
+      - run: conda install pot nilearn -c conda-forge -q
+      - save_cache:
+          key: v1-packages
+          paths:
+          - $HOME/miniconda3
+
       - run: pip install .
-      - run: set-o pipefail && pytest 2>&1 | tee log.txt
+      - run: set -o pipefail && pytest 2>&1 | tee log.txt
