--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
           key: v1-packages
       - run: |
           if
-            ls $HOME/miniconda3/bin | grep conda -q
-          else
+            ! [[ls $HOME/miniconda3/bin | grep conda -q]]
+          then
             wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
             chmod +x ~/miniconda.sh && ~/miniconda.sh -b
             echo 'export PATH="$HOME/miniconda3/bin:$PATH"' >> $BASH_ENV
