--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           key: v1-packages
       - run: |
           if
-            ! [[ls $HOME/miniconda3/bin | grep conda -q]]
+            ! [ls $HOME/miniconda3/bin | grep conda -q]
           then
             wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
             chmod +x ~/miniconda.sh && ~/miniconda.sh -b
