--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,12 +11,13 @@ jobs:
           key: v1-packages
       - run: |
           if
-            ! [ls $HOME/miniconda3/bin | grep conda -q]
-          then
+            ls $HOME/miniconda3/bin | grep conda -q
+          else
             wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
             chmod +x ~/miniconda.sh && ~/miniconda.sh -b
             echo 'export PATH="$HOME/miniconda3/bin:$PATH"' >> $BASH_ENV
             conda create -n testenv python=3.6 pandas scikit-learn joblib Cython mkl -yq
+          fi
       - run: source activate testenv
       - run: conda install pot nilearn -c conda-forge -q
       - save_cache:
