--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: v1-packages
+          key: v2-packages
       - run: |
           if
             ls $HOME | grep miniconda3 -q
@@ -18,13 +18,13 @@ jobs:
             wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
             chmod +x ~/miniconda.sh && ~/miniconda.sh -b
             export PATH="$HOME/miniconda3/bin:$PATH"
-            conda create -n testenv python pandas scikit-learn joblib Cython mkl -yq
+            conda create -n testenv python pandas pytest scikit-learn joblib Cython mkl -yq
           fi
       - run: echo 'export PATH="$HOME/miniconda3/bin:$PATH"' >> $BASH_ENV
       - run: source activate testenv
-      - run: conda install pot nilearn -c conda-forge -yq
+      - run: conda install --no-update-dependencies pot nilearn -c conda-forge -yq
       - save_cache:
-          key: v1-packages
+          key: v2-packages
           paths:
           - $HOME/miniconda3
 
