--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,12 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6
+      - image: circleci/python:3.7
 
     steps:
       - checkout
       - restore_cache:
-          key: v2-packages
+          key: v1-packages
       - run: |
           if
             ls $HOME | grep miniconda3 -q
@@ -18,15 +18,14 @@ jobs:
             wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
             chmod +x ~/miniconda.sh && ~/miniconda.sh -b
             export PATH="$HOME/miniconda3/bin:$PATH"
-            conda create -n testenv python pandas pytest scikit-learn joblib Cython mkl -yq
+            conda create -n testenv python pandas pytest scikit-learn joblib cython mkl -yq
           fi
       - run: echo 'export PATH="$HOME/miniconda3/bin:$PATH"' >> $BASH_ENV
       - run: source activate testenv
       - run: conda install --no-update-dependencies pot nilearn -c conda-forge -yq
-      - save_cache:
-          key: v2-packages
-          paths:
-          - $HOME/miniconda3
-
       - run: pip install .
       - run: set -o pipefail && pytest 2>&1 | tee log.txt
+      - save_cache:
+          key: v1-packages
+          paths:
+          - $HOME/miniconda3
