--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,10 @@ jobs:
           pip install .
           set -o pipefail && pytest 2>&1 | tee log.txt
       - run:
-          |
-          make html
-        - persist_to_workspace:
-          root: build
-          paths: html
+          source activate testenv
+          set -o pipefail && make html 2>&1 | tee log.txt
+      - store_artifacts:
+          path: build/html
       - save_cache:
           key: v3-packages
           paths:
