--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,7 @@ jobs:
       - run: echo 'export PATH="$HOME/miniconda3/bin:$PATH"' >> $BASH_ENV
       - run: |
           source activate testenv
-          conda install --no-update-deps pot nilearn sphinx sphinx-gallery -c conda-forge -yq
-          pip install sphinx-gallery
+          conda install --no-update-deps pot nilearn sphinx numpydoc sphinx-gallery -c conda-forge -yq
           pip install .
           set -o pipefail && pytest 2>&1 | tee log.txt
       - run: |
