[MAINT] Updating packaging (#60)
* Move to pyproject.toml

* Rename doc building

* Re-organize imports for readability

* Remove and untrack coverage

* Update to py39

* temp placeholders for extra installations, modify readme

* black and isort all files

* Add missing netrep link

* Fix mixed tabs and spaces

* Remove nistats, old nilearn refs

* Add pre-commit

* Clean refs to POT dependency

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+.DS_Store
+
+# hatchling
+fmralign/_version.py
+fmarlign/__pycache__
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -41,7 +47,7 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .nox/
-.coverage
+**/.coverage
 .coverage.*
 .cache
 nosetests.xml
@@ -51,29 +57,9 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
 # Sphinx documentation
 source/_build/
 source/auto_examples/
-
-# PyBuilder
-target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -87,13 +73,6 @@ ipython_config.py
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
 
 # Environments
 .env
@@ -114,14 +93,3 @@ venv.bak/
 
 # Rope project settings
 .ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
