--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cimg/python:3.8
+      - image: cimg/python:3.9
 
     steps:
       - checkout
@@ -23,7 +23,9 @@ jobs:
       - run: echo 'export PATH="$HOME/miniconda3/bin:$PATH"' >> $BASH_ENV
       - run: |
           source activate testenv
-          conda install --no-update-deps pot nilearn sphinx numpydoc sphinx-gallery -c conda-forge -yq
+          conda install pot nilearn sphinx numpydoc sphinx-gallery -c conda-forge -yq
+          conda install jax jaxlib chex
+          conda install -c conda-forge ott-jax
           pip install .
           set -o pipefail && pytest 2>&1 | tee log.txt
       - run: |
