[MAINT] Fix tests (#61)
* Improve readability

* Continue linting

* Remove all deprecated input_data imports

* Update r2_score calls, imports

* use bleeding edge nilearn for sk compatibility fixes

* Fix numpy rng call

* Fix OTT-JAX calls

* Remove prints, pin nilearn version

* Add testing GHA

* remove cimg step that now duplicates GHA

* Fix some flake8 errors, remove flake8 in GHA for now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "joblib",
     "scipy",
     "nibabel",
-    "nilearn > 0.9.0",
+    "nilearn@git+https://github.com/nilearn/nilearn#egg=1b11edf5789813d20995e7744bc58f3a2b6bc4ea",
     "POT"
 ]
 dynamic = ["version"]
