[MAINT] Use Nilearn's hierarchical kmeans implentation (#63)
* Remove hierarchical kmeans impl for nilearn impl

* correct regions.Parcellations param call

* Revert wrong change

* Fix hierarchical_kmeans call in test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ test = [
 ]
 # Useful for development
 dev = [
-  "nilearn[jax,doc,test]",
+  "fmralign[jax,doc,test]",
   "isort",
   "flynt",
   "black",
