--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,11 +25,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[jax,doc,test]
-      # - name: Flake8
-      #   run: |
-      #     python -m pip install --upgrade pip flake8 flake8-docstrings flake8-use-fstring
-      #     flake8 --verbose .
+          pip install -e .[dev]
+      - name: Flake8
+        run: |
+          flake8 --verbose .
       - name: Test with pytest
         run: |
           pytest
