--- a/.gitignore
+++ b/.gitignore
@@ -58,8 +58,11 @@ coverage.xml
 .pytest_cache/
 
 # Sphinx documentation
+doc/_build
+doc/auto_examples/
 source/_build/
 source/auto_examples/
+
 
 # Jupyter Notebook
 .ipynb_checkpoints
